# pillardisk

./: .gitignore  ANSWERS.md  CLAUDE.md  README_pillar_disk.md  SPEED_TIPS.md  bowl.for  config.yaml  config_line.yaml  config_line_hp06.yaml  debug_host_bias.py  diskshad.for  dummy_npallpgpoint.for  fnubowl.for  hotspot_temperature.py  make_time_evolving_figures.py  make_vdm_1pillar.py  make_vdm_frame.py  make_vdm_responsivity.py  make_vdm_weighting_compare.py  misc.for  pillar_disk.py  pillar_line.py  pillar_line_cloudy.py  pillar_line_time.py  pillar_line_time_cloudy.py  plot_backtrace_rays.py  plot_bending_rays.py  plot_bump_width_scan.py  plot_campfrac_scan.py  plot_cloudy_responsivity_curves.py  plot_diffuse_shadow.py  plot_eta_visc_scan.py  plot_ftrans_comparison.py  plot_fvg_bowl.py  plot_geometry_figures.py  plot_height_comparison.py  plot_hostamp_scan.py  plot_hostcolor_scan.py  plot_inclination_comparison.py  plot_ionflux_profile.py  (+23 more)
